<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.mecanicosgruas.edu.mecanicosgruas.servicio_display">

        <RatingBar
            android:id="@+id/ratingBarServiceDisplay"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="1.5" />

        <TextView
            android:id="@+id/txtViewCalificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_calificar"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgViewBackgroundServiceDisplay"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/desc_background_img_service"
                app:srcCompat="@drawable/background_service" />

            <TextView
                android:id="@+id/txtViewNameServiceDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/desc_servicio"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginStart="10dp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/txtViewInfoService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/desc_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewDescService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewDescServiceContanier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:text="@string/desc_servicio"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtViewDescHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_horario"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewDisplay_horario"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/txtViewTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_Telefono"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtViewCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_ciudad"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtViewColonia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_colonia"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtViewCalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_calle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtViewNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_num"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMandarInbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_inbox" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chat"
                android:layout_gravity="center"/>
        </FrameLayout>


    </LinearLayout>
</ScrollView>