<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgViewBackgroundUserPanel"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_background_user"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imgViewUserPanel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="start|top"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_img_user"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/desc_user"
        android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/desc_email_example"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

</FrameLayout>