<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/linearLayoutBtnCreateService">

        <LinearLayout

            android:id="@+id/idLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/txtViewTitleDescServiceCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/txtViewTitle_fl_service"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtViewNoteCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/desc_note"
                android:textSize="14sp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/txtViewFragmentTitle">

                <ImageView
                    android:id="@+id/imgBackgroundServiceCreateService"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/background"
                    app:srcCompat="@drawable/background_service" />

                <TextView
                    android:id="@+id/txtViewTitleServiceCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:text="@string/desc_servicio"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/imgServiceCreateService"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/background"
                    app:srcCompat="@drawable/img_service"/>
            </FrameLayout>
            <TextView
                android:id="@+id/txtViewInfoCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/desc_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_servicio"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"/>
                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/editTxtNameServiceCreateService"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/titulo_service"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewDescCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_description"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTxtDescCreateService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/desc_service"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txtViewDescImgService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_images"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txtViewImgBackgroundCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/desc_background_img_service"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imgBtnBackgroundCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:layout_marginBottom="60dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/desc_search_img"
                    app:srcCompat="@drawable/ic_action_search_holo_light" />

                <TextView
                    android:id="@+id/txtViewImgCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/desc_img_service"
                    android:textSize="18sp" />


                <ImageButton
                    android:id="@+id/imgBtnUserCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/desc_search_img"
                    app:srcCompat="@drawable/ic_action_search_holo_light" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/desc_horario"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/idListViewHorarios"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/txtViewDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/desc_direccion"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtViewCiudadCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_ciudad"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"/>
                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/editTxtCuidadCreateService"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/desc_ciudad" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtViewColoniaCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_colonia"
                    android:layout_marginStart="20dp"
                    android:textSize="18sp"/>
                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/editTxtColoniaCreateService"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/desc_colonia" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtViewCalleCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_calle"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"/>
                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/editTxtCalleCreateService"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/desc_calle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtViewNumCreateService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_num"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"/>
                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/editTxtNumCreateService"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/desc_num"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayoutBtnCreateService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnGuardarCreateService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_desc_service"/>
    </LinearLayout>
</RelativeLayout>




