<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idItemService"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RatingBar
        android:id="@+id/ratingBarStar"
        style="@android:style/Widget.Holo.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="1.5"
        android:stepSize="0.1"
        android:visibility="visible"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:id="@+id/idInfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgService"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_img_service"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/idInfoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewNameService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_servicio"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txtVewCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_ciudad"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txtViewNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_Telefono"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
